--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
                 <a href="index.html" class="nav-link">Home</a>
                 <a href="login.html" class="nav-link">Login</a>
                 <a href="register.html" class="nav-link">Register</a>
-                <a href="admin-login.html" class="nav-link admin-link">Admin</a>
+                <!-- <a href="admin-login.html" class="nav-link admin-link">Admin</a> -->
             </div>
             <div class="hamburger">
                 <span></span>
