--- a/dashboard.html
+++ b/dashboard.html
@@ -30,9 +30,9 @@
     </nav>
 
     <!-- Admin Panel Link (Visible when admin is logged in) -->
-    <!-- <a href="admin-dashboard.html" class="admin-panel-link" id="adminPanelLink" style="display: none;">
+    <a href="admin/admin-dashboard.html" class="admin-panel-link" id="adminPanelLink" style="display: none;">
         Admin Panel
-    </a> -->
+    </a>
 
     <section class="dashboard">
         <div class="container">
