--- a/admin/admin-login.html
+++ b/admin/admin-login.html
@@ -18,7 +18,7 @@
                 <a href="../index.html" class="nav-link">Home</a>
                 <a href="../login.html" class="nav-link">User Login</a>
                 <a href="../register.html" class="nav-link">User Register</a>
-                <a href="admin-login.html" class="nav-link active admin-link">Admin Login</a>
+                <!-- <a href="admin-login.html" class="nav-link active admin-link">Admin Login</a> -->
             </div>
             <div class="hamburger">
                 <span></span>
